--- a/index.html
+++ b/index.html
@@ -1,48 +1,66 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Amithen&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="styles.css" />
     <title>Survey Form</title>
-</head>
-<body>
+  </head>
+  <body>
     <form>
-        <label for="first-name">First Name:</label>
-        <input type="text" id="first-name" name="first-name" required>
+      <label for="first-name">First Name:</label>
+      <input type="text" id="first-name" name="first-name" required />
 
-        <label for="last-name">Last Name:</label>
-        <input type="text" id="last-name" name="last-name" required>
+      <label for="last-name">Last Name:</label>
+      <input type="text" id="last-name" name="last-name" required />
 
-        <label for="email">Email:</label>
-        <input type="email" id="email" name="email" required>
+      <label for="email">Email:</label>
+      <input type="email" id="email" name="email" required />
 
-        <label for="phone-number">Phone Number:</label>
-        <input type="number" id="phone-number" name="phone-number">
+      <label for="phone-number">Phone Number:</label>
+      <input type="number" id="phone-number" name="phone-number" />
 
-        <label for="sector">Sector of the economy:</label>
-        <select id="sector" name="sector">
-            <option value="primary">Primary</option>
-            <option value="secondary">Secondary</option>
-            <option value="tertiary">Tertiary</option>
-        </select>
+      <label for="sector">Sector of the economy:</label>
+      <select id="sector" name="sector">
+        <option value="" disabled selected>Please select an option...</option>
+        <option value="primary">Primary</option>
+        <option value="secondary">Secondary</option>
+        <option value="tertiary">Tertiary</option>
+      </select>
 
-        <label for="profession">Profession:</label>
-        <input type="text" id="profession" name="profession">
+      <br>
+      <label for="profession">Profession:</label>
+      <input type="text" id="profession" name="profession" />
 
-        <fieldset>
-            <legend>Availability:</legend>
-            <input type="checkbox" id="morning" name="availability" value="Morning">
-            <label for="morning">Morning</label>
-            <input type="checkbox" id="afternoon" name="availability" value="Afternoon">
-            <label for="afternoon">Afternoon</label>
-            <input type="checkbox" id="night" name="availability" value="Night">
-            <label for="night">Night</label>
-        </fieldset>
+      <fieldset>
+        <legend>Availability:</legend>
+        <input
+          type="checkbox"
+          id="morning"
+          name="availability"
+          value="Morning"
+        />
+        <label for="morning">Morning</label>
+        <input
+          type="checkbox"
+          id="afternoon"
+          name="availability"
+          value="Afternoon"
+        />
+        <label for="afternoon">Afternoon</label>
+        <input type="checkbox" id="night" name="availability" value="Night" />
+        <label for="night">Night</label>
+      </fieldset>
 
-        <label for="comments">Comments:</label>
-        <textarea id="comments" name="comments"></textarea>
+      <br>
+      <label for="comments">Comments:</label>
+      <textarea id="comments" name="comments"></textarea>
 
-        <button type="submit">Submit</button>
+      <button type="submit">Submit</button>
     </form>
-</body>
+  </body>
 </html>
