--- a/index.html
+++ b/index.html
@@ -1,66 +1,50 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Amithen&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@400;700&family=Amithen&display=swap" rel="stylesheet" />
     <link rel="stylesheet" href="styles.css" />
     <title>Survey Form</title>
-  </head>
-  <body>
-    <form>
-      <label for="first-name">First Name:</label>
-      <input type="text" id="first-name" name="first-name" required />
+</head>
+<body>
+    <h1 id="title">Profession Survey Form</h1>
+    <p id="description">Please fill out this form to participate in the survey.</p>
+    <br>
+    <form id="survey-form">
+        <label for="name" id="name-label">Name:</label>
+        <input type="text" id="name" name="name" placeholder="Enter your name" required />
 
-      <label for="last-name">Last Name:</label>
-      <input type="text" id="last-name" name="last-name" required />
+        <label for="email" id="email-label">Email:</label>
+        <input type="email" id="email" name="email" placeholder="Enter your email" required />
 
-      <label for="email">Email:</label>
-      <input type="email" id="email" name="email" required />
+        <label for="number" id="number-label">Age:</label>
+        <input type="number" id="number" name="number" placeholder="Age" min="10" max="100" required />
 
-      <label for="phone-number">Phone Number:</label>
-      <input type="number" id="phone-number" name="phone-number" />
+        <label for="dropdown">Choose a sector:</label>
+        <select id="dropdown" name="sector">
+            <option value="primary">Primary</option>
+            <option value="secondary">Secondary</option>
+        </select>
 
-      <label for="sector">Sector of the economy:</label>
-      <select id="sector" name="sector">
-        <option value="" disabled selected>Please select an option...</option>
-        <option value="primary">Primary</option>
-        <option value="secondary">Secondary</option>
-        <option value="tertiary">Tertiary</option>
-      </select>
-
-      <br>
-      <label for="profession">Profession:</label>
-      <input type="text" id="profession" name="profession" />
-
-      <fieldset>
-        <legend>Availability:</legend>
-        <input
-          type="checkbox"
-          id="morning"
-          name="availability"
-          value="Morning"
-        />
+        <p>Preferred contact time:</p>
+        <input type="radio" id="morning" name="contact-time" value="Morning" />
         <label for="morning">Morning</label>
-        <input
-          type="checkbox"
-          id="afternoon"
-          name="availability"
-          value="Afternoon"
-        />
+        <input type="radio" id="afternoon" name="contact-time" value="Afternoon" />
         <label for="afternoon">Afternoon</label>
-        <input type="checkbox" id="night" name="availability" value="Night" />
-        <label for="night">Night</label>
-      </fieldset>
 
-      <br>
-      <label for="comments">Comments:</label>
-      <textarea id="comments" name="comments"></textarea>
+        <fieldset>
+            <legend>Interests:</legend>
+            <input type="checkbox" id="tech" name="interest" value="Technology" />
+            <label for="tech">Technology</label>
+            <input type="checkbox" id="sports" name="interest" value="Sports" />
+            <label for="sports">Sports</label>
+        </fieldset>
 
-      <button type="submit">Submit</button>
+        <label for="comments">Comments:</label>
+        <textarea id="comments" name="comments" placeholder="Additional comments"></textarea>
+
+        <button type="submit" id="submit">Submit</button>
     </form>
-  </body>
+</body>
 </html>
