title and description design adjusted

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
     <title>Survey Form</title>
 </head>
 <body>
-    <h1 id="title">Profession Survey Form</h1>
-    <p id="description">Please fill out this form to participate in the survey.</p>
+    <div>
+        <h1 id="title">Profession Survey Form</h1>
+        <p id="description">Please fill out this form to participate in the survey.</p>
+    </div>
     <br>
     <form id="survey-form">
         <label for="name" id="name-label">Name:</label>
